tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause3.ts(1,28): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause3.ts (1 errors) ====
    class C extends implements A {
                               ~
!!! error TS2304: Cannot find name 'A'.
    }